fix: change our quotes woohoo

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -113,7 +113,7 @@
                         <h2>Joined October 2022</h2>
                         <img src="./Chen.jpg">
                         <p>Chen works on a crucial part of the Design-Test cycle: the testing phase. He manages the CFD testing to feedback results & figures such as drag to Pranit, helping us improve our car, and being able to produce drag and lift values for us to compare other cars against and log in our portfolio. In addition, he manages digital presence side of our brand, even creating this very website! He has also set up our email and Twitter account to use for team-related activities.</p>
-                        <p>"f1 in school is very cool"</p>
+                        <p>"we dont bottle our starts unlike lando noris"</p>
                     </div>
                 </div>
                 <div class="second-line">
@@ -125,7 +125,7 @@
                         <h2>Joined January 2024</h2>
                         <img src="./Josh.jpg">
                         <p>Josh has been a long time fan of motorsport and especially Formula One , bringing useful information about the design of our cars. He also helps with the business and testing aspects of the team, proving him to be a valuable resource to the team. He has also dedicated a lot time learning how to use various Ansys and Autodesk products such as Fusion 360 and Ansys Discovery. Overall, Josh is one of the key members on this team, allowing us to flourish and thrive.</p>
-                        <p>"ALEX ALBON IN POINTS IN A WILLIAMS WOOOOOOOOOOOOOOOOOOOOOO"</p>
+                        <p>"williams first driver lineup with full no appendix"</p>
                     </div>
 
                     <div class="person" id="rayhaan">
