fix: josh goofed up

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -125,7 +125,7 @@
                         <h2>Joined January 2024</h2>
                         <img src="./Josh.jpg">
                         <p>Josh has been a long time fan of motorsport and especially Formula One , bringing useful information about the design of our cars. He also helps with the business and testing aspects of the team, proving him to be a valuable resource to the team. He has also dedicated a lot time learning how to use various Ansys and Autodesk products such as Fusion 360 and Ansys Discovery. Overall, Josh is one of the key members on this team, allowing us to flourish and thrive.</p>
-                        <p>"williams first driver lineup with full no appendix"</p>
+                        <p>"nando alonso my favourite rookie"</p>
                     </div>
 
                     <div class="person" id="rayhaan">
