--- a/snek.html
+++ b/snek.html
@@ -41,12 +41,22 @@
 
         let snake = new Image();
         let food = new Image();
+        let bro = new Image();
+        let bite = new Audio();
+        let hit = new Audio();
+        let soz = new Image();
 
         let score = 0;
         let over = false;
 
-        snake.src = "https://media.discordapp.net/attachments/1046176833600753676/1321531335155650631/image.png?ex=676d9377&is=676c41f7&hm=d1bed47f2dc23d624f2424be443b0ec3088a87aac437543bcc5996595a89a8cc&=&format=webp&quality=lossless&width=64&height=64";
-        food.src = "https://media.discordapp.net/attachments/1046176833600753676/1321531709249949777/image.png?ex=676d93d0&is=676c4250&hm=f8974ed8cdc7d003ecbc590f7879dbb1c48f52e6f6fbaa502ec9a4f1c6c6daac&=&format=webp&quality=lossless&width=64&height=64";
+        bro.src = "https://media.discordapp.net/attachments/1046176833600753676/1321584648903594065/image.png?ex=676dc51e&is=676c739e&hm=8525835aa58411c5d012f648ec65d6a4f20d458f38ef17921416e0965b81e2eb&=&format=webp&quality=lossless&width=64&height=64";
+        food.src = "https://media.discordapp.net/attachments/1046176833600753676/1321498747070451783/image.png?ex=676d751d&is=676c239d&hm=41c7f0552274b88e627a8af3e91e13e64d7010e2487d359df7a8b63d261f6591&=&format=webp&quality=lossless&width=64&height=64";
+        snake.src = "https://media.discordapp.net/attachments/1046176833600753676/1321584800376684604/image.png?ex=676dc542&is=676c73c2&hm=c1ca37fcc10968f3cf148f9857e989a263e7ef6d3b08bb1b10887ebf6d8a34eb&=&format=webp&quality=lossless&width=64&height=64";
+        bite.src = "nom.mp3";
+        hit.src = "ough-47202.mp3";
+        soz.src = "https://media.discordapp.net/attachments/1046176833600753676/1321584375409938432/image.png?ex=676dc4dc&is=676c735c&hm=885a280ac376ebcaa5479799c1346c98b3de9521276385573fd191516a7b04b0&=&format=webp&quality=lossless&width=64&height=64";
+
+        let difficulty = 150.5;
 
         window.onload = () => {
             board = document.getElementById("gaem");
@@ -63,7 +73,7 @@
                 placement = initialiseSnek();
             }
 
-            setInterval(update, 250);
+            setInterval(update, difficulty);
             document.addEventListener("keyup", move);
         }
 
@@ -81,6 +91,8 @@
 
             // when snake eats food
             if (snekX === foodX && snekY === foodY) {
+                bite.play();
+                difficulty += -0.5
                 score++;
                 bod.push([foodX, foodY]);
                 placeFood();
@@ -90,16 +102,26 @@
                 bod[i] = bod[i - 1];
             }
 
-            bod[0] = [snekX, snekY];
+            for (let i = 0; i < bod.length; i++) {
+                if (!i) {
+                    continue;
+                }
+                else if (i === bod.length - 1) {
+                    const end = context.createPattern(soz, null)
+                    context.fillStyle = end;
+                    context.fillRect(bod[i][0], bod[i][1], isThatGlock, isThatGlock);
+                }
+                else {
+                    const middle = context.createPattern(bro, null)
+                    context.fillStyle = middle;
+                    context.fillRect(bod[i][0], bod[i][1], isThatGlock, isThatGlock);
+                }
+            }
 
             // snake
             const snak = context.createPattern(snake, null)
             context.fillStyle = snak;
             context.fillRect(snekX, snekY, isThatGlock, isThatGlock);
-
-            for (let i = 0; i < bod.length; i++) {
-                context.fillRect(bod[i][0], bod[i][1], isThatGlock, isThatGlock);
-            }
 
             // food
             const fod = context.createPattern(food, null)
@@ -108,20 +130,24 @@
             
             if (snekX < 0 || snekY >= rows * isThatGlock || snekY < 0 || snekX >= columns * isThatGlock) {
                 over = true;
-                alert("game over\nscore: " + score)
+                hit.play();
+                alert("game over\nscore: " + score);
                 return;
             }
 
-            /* this code doesnt work
             for (let i of bod) {
                 if (bod.length !== 1) {
                     if (snekX == i[0] && snekY == i[1]) {
                         over = true;
-                        alert("game over")
+                        hit.play();
+                        alert("game over");
                     }
                 }
             }
-            */
+
+            if (bod.length) {
+                bod[0] = [snekX, snekY];
+            }
         }
 
         const initialiseSnek = () => {
@@ -143,26 +169,41 @@
                 return true;
             }
             else {
-                return false;
+                for (let i = 0; i < bod.length; i++) {
+                    if ((bod[i][0] === foodX) || (bod[i][1] === foodY)) {
+                        return true;
+                    }
+                    else {
+                        return false;
+                    }
+                }
             }
         }
 
         const move = (event) => {
             if (event.code === "ArrowUp" && speedY != 1) {
+                bro.style.transform = "rotate(0)";
                 speedX = 0;
                 speedY = -1;
+                bro.style.transform = "rotate(0)";
             }
             else if (event.code === "ArrowDown" && speedY != -1) {
+                bro.style.transform = "rotate(0)";
                 speedX = 0;
                 speedY = 1;
+                bro.style.transform = "rotate(180)";
             }
             else if (event.code === "ArrowLeft" && speedX != 1) {
+                bro.style.transform = "rotate(0)";
                 speedX = -1;
                 speedY = 0;
+                bro.style.transform = "rotate(270)";
             }
             else if (event.code === "ArrowRight" && speedX != -1) {
+                bro.style.transform = "rotate(0)";
                 speedX = 1;
                 speedY = 0;
+                bro.style.transform = "rotate(90)";
             }
         }
     </script>
