--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -46,8 +46,15 @@
             <div class="container" style="border: 10px solid #f8ac29;padding:5px 25px;">
                 <h2>Silk Route Legal - Platinum Sponsor</h2>
                 <div class="contain">
-                    <p>Silk Route Legal is our first ever sponsor...</p>
+                    <p>Silk Route Legal is our first ever sponsor. They are a family business specialising in legal services. They provide and offer professional legal services to UK and international clients. They guide clients to growth and success through their expert legal advice and are based in Holborn, London.</p>
                     <img class="right" src="silk.jpg">
+                </div>
+            </div>
+            <div class="container" style="border: 10px solid #f8ac29;padding:5px 25px;">
+                <h2>Crossfields Consultants - Supporter</h2>
+                <div class="contain">
+                    <p>Crossfields Consultants are another family business who opted for our lowest but with the most value sponsorship package. They offer information technology solutions such as website design. Their products are simple yet scalable, making it perfect for any clients, no matter their size. They are located in Bromley, London near our school.</p>
+                    <img class="right" src="crossfields.png">
                 </div>
             </div>
         </section>
