the food will now load again

--- a/snek.html
+++ b/snek.html
@@ -100,12 +100,12 @@
         let recorder = "Chen";
         let over = false;
 
-        bro.src = "https://media.discordapp.net/attachments/1046176833600753676/1321584648903594065/image.png?ex=676dc51e&is=676c739e&hm=8525835aa58411c5d012f648ec65d6a4f20d458f38ef17921416e0965b81e2eb&=&format=webp&quality=lossless&width=64&height=64";
-        food.src = "https://media.discordapp.net/attachments/1046176833600753676/1321498747070451783/image.png?ex=676ec69d&is=676d751d&hm=7fdca1fdbe0f7cab37e81555fbe998a4cf51559aeeb92f39ecf66752ddd376d0&=&format=webp&quality=lossless&width=64&height=64";
-        snake.src = "https://media.discordapp.net/attachments/1046176833600753676/1321584800376684604/image.png?ex=676dc542&is=676c73c2&hm=c1ca37fcc10968f3cf148f9857e989a263e7ef6d3b08bb1b10887ebf6d8a34eb&=&format=webp&quality=lossless&width=64&height=64";
+        bro.src = "image.webp";
+        food.src = "image (1).webp";
+        snake.src = "image (2).webp";
         bite.src = "nom.mp3";
         hit.src = "ough-47202.mp3";
-        soz.src = "https://media.discordapp.net/attachments/1046176833600753676/1321584375409938432/image.png?ex=676dc4dc&is=676c735c&hm=885a280ac376ebcaa5479799c1346c98b3de9521276385573fd191516a7b04b0&=&format=webp&quality=lossless&width=64&height=64";
+        soz.src = "image (3).webp";
 
         let difficulty = 150.5;
 
