--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 <a href="./sponsors/" class="link">Sponsors</a>
                 <!-- <a href="./blog/" class="link">Blog</a> -->
                 <a href="./contact-us/" class="link">Contact Us</a>
-                <a href="javascript:void(0);" class="icon" onclick="hamburgerify()"><i class="fa fa-bars"></i></a>
             </div>
         </nav>
 
@@ -85,8 +84,8 @@
             <h2>Instagram</h2>
             <a href="https://www.instagram.com/team_blitz8" class="chip"><i class="fa fa-instagram" target="_blank"></i>Follow us on Instagram</a>
             <figure class="instagram-feed" data-behold-id="9KkC8tX1PVg8O4gmiCEr"></figure>
-            <h2>TikTok</h2>
-            <a href="https://tiktok.com/@team_blitz8" class="chip"><i class="fab fa-tiktok" target="_blank"></i>Follow us on TikTok</a>
+            <h2 class="tik">TikTok</h2>
+            <a class="tik" href="https://tiktok.com/@team_blitz8" class="chip"><i class="fab fa-tiktok" target="_blank"></i>Follow us on TikTok</a>
             <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
         </section>
 
