EVERYTHING WORKS YAY

--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
     <head>
         <title>Team Blitz | Home</title>
 
-        <link rel="stylesheet" type="text/css" href="/global/styling.css">
-        <link rel="icon" type="image/x-icon" href="/global/Logo.png">
+        <link rel="stylesheet" type="text/css" href="./global/styling.css">
+        <link rel="icon" type="image/x-icon" href="./global/Logo.png">
 
         <meta charset="UTF-8">
         <meta name="author" content="Team Blitz">
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#f8ac29">
 
-        <script src="/global/scripts.js" defer></script>
+        <script src="./global/scripts.js" defer></script>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script src="https://w.behold.so/widget.js" type="module"></script>
         <script src="https://kit.fontawesome.com/5de12ac90d.js" crossorigin="anonymous"></script>
@@ -21,17 +21,16 @@
 
     <body>
         <nav class="topnav" id="toppy">
-            <a href="/" class="logo"><img src="/global/Logo.png"></a>
+            <a href="./" class="logo"><img src="./global/Logo.png"></a>
 
             <div class="links">
-                <a href="/" class="link">Home</a>
-                <a href="/about-us" class="link">About Us</a>
-                <a href="/our-journey/" class="link">Our Journey</a>
-                <a href="/our-work/" class="link">Our Work</a>
-                <a href="/sponsors/" class="link">Sponsors</a>
+                <a href="./" class="link">Home</a>
+                <a href="./about-us" class="link">About Us</a>
+                <a href="./our-journey/" class="link">Our Journey</a>
+                <a href="./our-work/" class="link">Our Work</a>
+                <a href="./sponsors/" class="link">Sponsors</a>
                 <!-- <a href="/blog/" class="link">Blog</a> -->
-                <a href="/contact-us/" class="link">Contact Us</a>
-                <a href="javascript:void(0);" class="icon" onclick="hamburgerify()"><i class="fa fa-bars"></i></a>
+                <a href="./contact-us/" class="link">Contact Us</a>
             </div>
         </nav>
 
@@ -43,31 +42,30 @@
                 <button onclick="history.back()" class="but">Time-travel back</button>
                 <button onclick="location.href='/'" class="but">Run home</a>
             </div>
-            <img src="/global/yash2.png" id="hehehe">
+            <img src="./global/yash2.png" id="hehehe">
         </section>
 
         <footer>
             <div id="sponsors">
-                <img src="/sponsors/crossfields.png">
-                <img src="/sponsors/silk.jpg">
+                <img src="./sponsors/silk.jpg">
             </div>
 
             <div class="footnav">
-                <a href="/" class="footlink">Home</a>
-                <a href="/about-us" class="footlink">About Us</a>
-                <a href="/our-journey/" class="footlink">Our Journey</a>
-                <a href="/our-work/" class="footlink">Our Work</a>
-                <a href="/sponsors/" class="footlink">Sponsors</a>
+                <a href="./" class="footlink">Home</a>
+                <a href="./about-us" class="footlink">About Us</a>
+                <a href="./our-journey/" class="footlink">Our Journey</a>
+                <a href="./our-work/" class="footlink">Our Work</a>
+                <a href="./sponsors/" class="footlink">Sponsors</a>
                 <!-- <a href="./blog/" class="footlink">Blog</a> -->
-                <a href="/contact-us/" class="footlink">Contact Us</a>
+                <a href="./contact-us/" class="footlink">Contact Us</a>
             </div>
 
-            <p id="copyright">© Team Blitz 2022-2024. All rights reserved.</p>
+            <p id="copyright">© Team Blitz 2022-2025. All rights reserved.</p>
 
             <div class="social-links">
-                <a href="https://www.instagram.com/team_blitz8" target="_blank" id="insta"><img src="/global/insta.png"></a>
-                <a href="https://twitter.com/team_blitz8" target="_blank" id="x"><img src="/global/twitter.png"></a>
-                <a href="https://tiktok.com/@team_blitz8" target="_blank" id="tiktok"><img src="/global/tiktok.png"></a>
+                <a href="https://www.instagram.com/team_blitz8" target="_blank" id="insta"><img src="./global/insta.png"></a>
+                <a href="https://twitter.com/team_blitz8" target="_blank" id="x"><img src="./global/twitter.png"></a>
+                <a href="https://tiktok.com/@team_blitz8" target="_blank" id="tiktok"><img src="./global/tiktok.png"></a>
             </div>
         </footer>
     </body>
