--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -29,7 +29,6 @@
                 <a href="../sponsors/" class="link">Sponsors</a>
                 <!-- <a href="../blog/" class="link">Blog</a>-->
                 <a href="../contact-us/" class="link">Contact Us</a>
-                <a href="javascript:void(0);" class="icon" onclick="hamburgerify()"><i class="fa fa-bars"></i></a>
             </div>
         </nav>
 
@@ -40,20 +39,28 @@
 
         <section class="info">
             <h1>We're looking for sponsors!</h1>
-            <p>We are always looking for support during our F1 in Schools journey and are willing to reciprocate that support through promotion of your brand on social media channels, merchandise, pit display and your brand can even be featured on our F1 in Schools car on race day! We offer high ROIs and our rates our negotiable. Please contact the Enterprise team if you are interested in sponsoring us, or if you are an individual, you are more than welcome to support us through GoFundMe: [insert gofundme]</p>
+            <p>We are always looking for support during our F1 in Schools journey and are willing to reciprocate that support through promotion of your brand on social media channels, merchandise, pit display and your brand can even be featured on our F1 in Schools car on race day! We offer high ROIs and our rates our negotiable. Please contact the Enterprise team if you are interested in sponsoring us, or if you are an individual, you are more than welcome to support us through GoFundMe <a href="https://gofundme.com/f/team-blitz8">here</a></p>
                         
             <h1>We are currently in partnership with:</h1>
             <div class="container" style="border: 10px solid #f8ac29;padding:5px 25px;">
                 <h2>Silk Route Legal - Platinum Sponsor</h2>
                 <div class="contain">
-                    <p>Silk Route Legal is our first ever sponsor. They are a family business specialising in legal services. They provide and offer professional legal services to UK and international clients. They guide clients to growth and success through their expert legal advice and are based in Holborn, London.</p>
+                    <pre>Silk Route Legal is our first ever major sponsor.
+They are a family business specialising in legal services. They provide and offer professional legal services to UK and international clients.
+They guide clients to growth and success through their expert legal advice.
+They are based in Holborn, London.
+"The law firm that goes the extra mile"</pre>
                     <img class="right" src="silk.jpg">
                 </div>
             </div>
             <div class="container" style="border: 10px solid #f8ac29;padding:5px 25px;">
                 <h2>Crossfields Consultants - Supporter</h2>
                 <div class="contain">
-                    <p>Crossfields Consultants are another family business who opted for our lowest but with the most value sponsorship package. They offer information technology solutions such as website design. Their products are simple yet scalable, making it perfect for any clients, no matter their size. They are located in Bromley, London near our school.</p>
+                    <pre>Crossfields Consultants are another family business who opted for our lowest but with the most value sponsorship package, the SUPPORTER tier.
+They were our first sponsor.
+They offer information technology solutions such as website design.
+Their products are simple yet scalable, making it perfect for any clients, no matter their size.
+They are located in Bromley, London near our school.</pre>
                     <img class="right" src="crossfields.png">
                 </div>
             </div>
@@ -61,7 +68,6 @@
 
         <footer>
             <div id="sponsors">
-                <img src="./crossfields.png">
                 <img src="./silk.jpg">
             </div>
 
@@ -75,7 +81,7 @@
                 <a href="../contact-us/" class="footlink">Contact Us</a>
             </div>
 
-            <p id="copyright">© Team Blitz 2022-2024. All rights reserved.</p>
+            <p id="copyright">© Team Blitz 2022-2025. All rights reserved.</p>
             
             <div class="social-links">
                 <a href="https://www.instagram.com/team_blitz8" target="_blank" id="insta"><img src="../global/insta.png"></a>
