--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
         <title>Team Blitz | Home</title>
 
         <link rel="stylesheet" type="text/css" href="./global/styling.css">
+        <link rel="stylesheet" type="text/css" href="./global/stylez.css">
         <link rel="icon" type="image/x-icon" href="./global/Logo.png">
 
         <meta charset="UTF-8">
