--- a/about-us/index.html
+++ b/about-us/index.html
@@ -86,8 +86,8 @@
                         <h1>Yash Parekh</h1>
                         <h2>ENGINEERING TEAM</h2>
                         <h2>Team Manager & Design Engineer</h2>
-                        <h2 class="join-info">JOINED ENTRY CLASS</h2>
-                        <h2>Joined December 2022</h2>
+                        <h2 class="join-info">FOUNDING MEMBER</h2>
+                        <h2>Joined October 2022</h2>
                         <img src="./Yash.jpg">
                         <p>As well as leading the team, Yash has dedicated himself to learning many skills to aid each one of us in our roles, including himself - being the first to start learning CAD (Fusion 360) and organising & delegating tasks. He has also played a massive role in manufacturing: priming, painting, assembling, attaching vinyls and so much more, dedicating hours to the car.</p>
                         <p>"Working smarter and harder can lead to success"</p>
@@ -112,7 +112,7 @@
                         <h2>Joined October 2022</h2>
                         <img src="./Chen.jpg">
                         <p>Chen works on a crucial part of the Design-Test cycle: the testing phase. He manages the CFD testing to feedback results & figures such as drag to Pranit, helping us improve our car, and being able to produce drag and lift values for us to compare other cars against and log in our portfolio. In addition, he manages digital presence side of our brand, even creating this very website! He has also set up our email and Twitter account to use for team-related activities.</p>
-                        <p>"we dont bottle our starts unlike lando noris"</p>
+                        <p>"The best part of the competition is seeing our design come to fruition"</p>
                     </div>
                 </div>
                 <div class="second-line">
@@ -124,7 +124,7 @@
                         <h2>Joined January 2024</h2>
                         <img src="./Josh.jpg">
                         <p>Josh has been a long time fan of motorsport and especially Formula One , bringing useful information about the design of our cars. He also helps with the business and testing aspects of the team, proving him to be a valuable resource to the team. He has also dedicated a lot time learning how to use various Ansys and Autodesk products such as Fusion 360 and Ansys Discovery. Overall, Josh is one of the key members on this team, allowing us to flourish and thrive.</p>
-                        <p>"nando alonso my favourite rookie"</p>
+                        <p>"I LOVE BLITZ"</p>
                     </div>
 
                     <div class="person" id="rayhaan">
