Update roles thanks leon

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -107,7 +107,7 @@
                     <div class="person" id="chen">
                         <h1>Chen Hui Wang</h1>
                         <h2>ENGINEERING/ENTERPRISE TEAM</h2>
-                        <h2>Testing Engineer & Digital Manager</h2>
+                        <h2>Testing Engineer & Marketing Manager</h2>
                         <h2 class="join-info">FOUNDING MEMBER</h2>
                         <h2>Joined October 2022</h2>
                         <img src="./Chen.jpg">
@@ -119,7 +119,7 @@
                     <div class="person" id="josh">
                         <h1>Josh Abracadabra</h1>
                         <h2>ENGINEERING/ENTERPRISE TEAM</h2>
-                        <h2>Testing Engineer & Business</h2>
+                        <h2>Testing Engineer & Finance Manager</h2>
                         <h2 class="join-info">JOINED DEVELOPMENT CLASS</h2>
                         <h2>Joined January 2024</h2>
                         <img src="./Josh.jpg">
@@ -130,7 +130,7 @@
                     <div class="person" id="rayhaan">
                         <h1>Rayhaan Smith</h1>
                         <h2>ENTERPRISE TEAM</h2>
-                        <h2>Research & Resource Manager</h2>
+                        <h2>Business & Resource Manager</h2>
                         <h2 class="join-info">JOINED ENTRY CLASS</h2>
                         <h2>Joined September 2023</h2>
                         <img src="./Rayhaan.jpg">
