--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -48,20 +48,20 @@
                     <a class="button" href="mailto:business@teamblitz.uk">Contact for Business Enquiries</a>
                 </div>
                 <div class="row">
-                    <a class="button" href="mailto:engineering@teamblitz.uk">Contact Engineering Team</a>
-                    <a class="button" href="mailto:enterprise@teamblitz.uk">Contact Enterprise Team</a>
+                    <a class="button" href="mailto:engineering@teamblitz.uk">Engineering Team</a>
+                    <a class="button" href="mailto:enterprise@teamblitz.uk">Enterprise Team</a>
                 </div>
                 <div class="row">
-                    <a class="button" href="mailto:yash@teamblitz.uk">Contact Yash Parekh, Team Manager</a>
-                    <a class="button" href="mailto:pranit@teamblitz.uk">Contact Pranit Malhotra, Design Engineer</a>
+                    <a class="button" href="mailto:yash@teamblitz.uk">Yash Parekh, Team Manager</a>
+                    <a class="button" href="mailto:pranit@teamblitz.uk">Pranit Malhotra, Design Engineer</a>
                 </div>
                 <div class="row">
-                    <a class="button" href="mailto:chen@teamblitz.uk">Contact Chen Hui Wang, Testing/Digital Manager</a>
-                    <a class="button" href="mailto:josh@teamblitz.uk">Contact Josh Abraham, Testing/Business Manager</a>
+                    <a class="button" href="mailto:chen@teamblitz.uk">Chen Hui Wang, Testing/Marketing Manager</a>
+                    <a class="button" href="mailto:josh@teamblitz.uk">Josh Abraham, Testing/Finance Manager</a>
                 </div>
                 <div class="row">
-                    <a class="button" href="mailto:anu@teamblitz.uk">Contact Anuoluwapo Silva, Graphic Designer</a>
-                    <a class="button" href="mailto:rayhaan@teamblitz.uk">Contact Rayhaan Smith, Resource Manager</a>
+                    <a class="button" href="mailto:anu@teamblitz.uk">Anuoluwapo Silva, Graphic Designer</a>
+                    <a class="button" href="mailto:rayhaan@teamblitz.uk">Rayhaan Smith, Resource & Business Manager</a>
                 </div>
             </div>
             <h2 id="titre">Social Media</h2>
