--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h2>Website v2!</h2>
                     <p>20th July, 2024</p>
                     <p>St. Olave's Grammar School, Orpington</p>
-                    <p>We're excited to announce the launch of v2 of our website, updated with our recent achievements and with a new, stylish user interface for you..</p>
+                    <p>We're excited to announce the launch of v2 of our website, updated with our recent achievements and with a new, stylish user interface for you...</p>
                     <!-- <a href="./blog/8">Continue reading..</a> -->
                 </div>
             </div>
