--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
             <!-- <a href="./blog/" style="padding-bottom: 20px; display: inline-block; width: 100%">See our blog..</a> -->
             <div class="article">
                 <div class="content">
-                    <h2>Website v2!</h2>
-                    <p>20th July, 2024</p>
-                    <p>St. Olave's Grammar School, Orpington</p>
-                    <p>We're excited to announce the launch of v2 of our website, updated with our recent achievements and with a new, stylish user interface for you...</p>
-                    <!-- <a href="./blog/8">Continue reading..</a> -->
+                    <h2>Success at London South Regionals!</h2>
+                    <p>7th January, 2025</p>
+                    <p>Canterbury Christ Church University, Canterbury</p>
+                    <p>We participated in the London South Regional Finals, coming 2nd in the development class, winning 4 awards and progressing to the National Finals!</p>
+                    <!-- <a href="./blog/9">Continue reading..</a> -->
                 </div>
             </div>
             
             <div class="article">
                 <div class="content">
-                    <h2>New Member Incoming!</h2>
-                    <p>15th April, 2024</p>
+                    <h2>Website v2!</h2>
+                    <p>20th July, 2024</p>
                     <p>St. Olave's Grammar School, Orpington</p>
-                    <p>Following our success at Regionals last month, we are thrilled to introduce our new Member, Anuoluwapo Silva, to our Enterprise Team...</p>
-                    <!-- <a href="./blog/7">Continue reading..</a> -->
+                    <p>We're excited to announce the launch of v2 of our website, updated with our recent achievements and with a new, stylish user interface for you...</p>
+                    <!-- <a href="./blog/8">Continue reading..</a> -->
                 </div>
             </div>
 
