--- a/our-journey/index.html
+++ b/our-journey/index.html
@@ -57,7 +57,7 @@
             <div class="container left">
                 <div class="contained">
                     <h1>Regionals 2023 (Entry Class)</h1>
-                    <p>14th December 2023</p>
+                    <p>December 2023</p>
                     <p>We went to our first ever F1 in Schools competition in London North where months of diligence and work paid off, and we were able to come 2nd in the region for Entry Class and won two awards (for all classes): Verbal Presentation Award and Research & Development Award.</p>
                 </div>
             </div>
@@ -72,9 +72,17 @@
 
             <div class="container left">
                 <div class="contained">
-                    <h1>First Sponsor!</h1>
+                    <h1>First Major Sponsor!</h1>
                     <p>June 2024</p>
                     <p>In June 2024, we were able to finalise a deal with our partner and sponsor Silk Route Legal who became a Platinum sponsor, which meant that they played a significant part in helping us in our journey in the Development Class.</p>
+                </div>
+            </div>
+
+            <div class="container right">
+                <div class="contained">
+                    <h1>Regionals 2025 (Development Class)</h1>
+                    <p>January 2025</p>
+                    <p>With the new year, came new opportunities. Entering as a development class team in London South, our months of dedication in the Research & Development department finally paid off, coming from having the 4th fastest car the season prior to achieving the fastest car. We matched last season, coming 2nd in the development class and winning the Research & Development award again, alongside the Fastest Car and Portfolio Award.</p>
                 </div>
             </div>
             <br>
