--- a/our-work/index.html
+++ b/our-work/index.html
@@ -41,24 +41,53 @@
             <h1>Awards</h1>
             <div class="containerer">
                 <div class="container">
-                    <h2>Research and Development Award</h2>
+                    <h2>Research and Development Award (1)</h2>
                     <h3>London North Regionals - Achieved Entry Class</h3>
                     <p>The very first award we received, we achieved this due to a strong development strategy involving heavy amounts of CFD testing and iterative design. Our passion for F1 and motorsport in general also fuelled our motivation to further research about the physics of an F1 car.</p>
                 </div>     
                 <div class="container">
                     <h2>Verbal Presentation Award</h2>
                     <h3>London North Regionals - Achieved Entry Class</h3>
-                    <p>We received this award at the London North regionals following a strong Verbal Presentation thanks to excessive memorisation of our lines the nights before (oops, should've started earlier). We covered many aspects in our presentation and paid close attention to it and the scorecard for the section to achieve maximum marks for it.</p>
+                    <p>We received this award at the London North regionals following a strong Verbal Presentation thanks to excessive memorisation of our lines the nights before. We covered many aspects in our presentation and paid close attention to the scorecard to achieve many marks for it.</p>
+                </div> 
+                <div class="container">
+                    <h2>2nd in the Development Class</h2>
+                    <h3>London South Regionals - Achieved Development Class</h3>
+                    <p>We received this award due to our efforts in all sectors of our team, such as the fact that our car was the fastest out of the whole competition, and we had competitive portfolios. This award was not due to a specific person, but the combined efforts of our team, and it certainly paid off.</p>
+                </div>     
+                <div class="container">
+                    <h2>Fastest Car</h2>
+                    <h3>London South Regionals - Achieved Development Class</h3>
+                    <p>Thanks to our focus on research & development, our long period of research on aerodynamics and our unbreakable trust in CFD, we were able to clinch the fastest car at the regional final, with a best track time of 1.339s, an improvement from our previous time of 1.550s last year.</p>
+                </div> 
+                <div class="container">
+                    <h2>Research and Development Award (2)</h2>
+                    <h3>London South Regionals - Achieved Development Class</h3>
+                    <p>Despite us receiving the Research and Development award last year, there were stil some major flaws in our design development process. Ironing out the folds in our iterative design and CFD processes such as switching to a new turbulence model, we reached new heights. And we did it again.</p>
+                </div>     
+                <div class="container">
+                    <h2>Portfolio Award</h2>
+                    <h3>London South Regionals - Achieved Development Class</h3>
+                    <p>Looking at our scorecard from last year, we saw that we suffered in terms of document presentation particularly but could improve in all areas. We noticed that we could decrease our font size and adopt a more optimal 3-column consistent layout which would allow us to cover more information.</p>
                 </div> 
             </div>      
             <h1>Our Car Designs</h1>
-            <div class="container" id="entry-car">
+            <div class="container entry-car">
                 <h2>BL1 (Codename Dash) - Our Entry Class Car</h2>
                 <h3>Drag: 0.24974529N</h3>
                 <p class="para">BL1 was our first car we created and competed with, going through many stages to reach where it had got to. It performed the best in CFD testing between our other prototypes, and has a balanced amount of airflow around the car. It has minor changes from previous designs and a new rear wing following advice from experienced teams in our school: A longer tear drop shape rather than an oval. This new rear wing introduced in the last few months of the design-test cycle after other DEV and PRO F1 in Schools teams recommended us to try a longer rear wing. Promising CFD results led us to produce this final car to be manufactured for the competition day. It is made up of 3 parts: Pierce for the front wing, Flat for the side pod, and elipse for the rear wing.</p>
                 <img src="dash.png" class="img">
             </div>
+            <div class="container entry-car">
+                <h2>BL2 (Codename Flash) - Our Development Class Regionals Car</h2>
+                <h3>Drag: 0.229188616N</h3>
+                <p class="para">For our second ever entry at an F1 in Schools competition, we didn't disappoint. We went off with a strong start with the new 2024/25 halo regulations era, doing intense research and brainstorming ideas that would have the best performance based on this research. Once we had our initial ideas, CFD was key to our design development, giving us helpful feedback in the iterative design process and allowing us to evolve our car in the areas where it was weak. Flash went through several iterations and proved to be the strongest of the three designs we put forward for final CFD testing. It features a curved side pod and front wing, with the idea of using the Coanda effect to guide air away from the wheels. Our rear pod was designed to reduce the wake using the Coanda effect too.</p>
+                <img src="flash.png" class="img">
+            </div>
             <br>
+            <h1>Portfolios</h1>
+            <p>By downloading these portfolios, you acknowledge that the content and materials in this portfolio are the intellectual property of Team Blitz and are protected by copyright law. No part of this portfolio may be reproduced, distributed, or used without permission, except for personal, non-commercial use. You may use this portfolio for inspirational purposes only.</p>
+            <a href="https://stolavesgrammarschool-my.sharepoint.com/:p:/g/personal/chenhui_wang_saintolaves_net/ER05JAGPs2hAtASJy4kOH3UBpay2ds1G_XQiUBC-A9eyBQ?e=RehWN7">Entry Class Portfolio</a>
         </section>
 
         <footer>
